--- a/index.html
+++ b/index.html
@@ -2,14 +2,30 @@
 <html>
 	<head>
 		<title>SImonNerBest</title>
-		<link rel="stylesheet" type="text/css" href="style/style.css">
+		<link rel="stylesheet" type="text/css" href="styles/style.css">
 	</head>
 	<body>
 
 	Hei
+	<div class="box">
+		<ul>
+			<li>
+				<a href="/galleri.html">GALLERI</a>
+				<ul>
+					<li>
+						<a href="/galleri2.html">GALLERI2</a>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<a href="/contact.html">CONTACT</a>
+			</li>
+		</ul>
+	<strong>HHALLO</strong>
+	</div>
+	<img src="bilder/nanologo.png" alt="">
+
 
 
 	</body>
 </html>
-
-
