--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		</ul>
 	<strong>HHALLO</strong>
 	</div>
-	<img src="bilder/nanologo.png" alt="">
+	<a href="nanogrenland.html">
+	<img src="bilder/nanologo.png" alt=""></a>
 
 
 
